corrections and updates
